fix z-index issue associated with navbar, banner and fixed table headers

--- a/app/plants/static/plants/css/style.css
+++ b/app/plants/static/plants/css/style.css
@@ -98,7 +98,8 @@ img
 {
     position:fixed;
     width:100%;
-    z-index:1;
+    z-index:100;
+    padding-right: 16px;
     top:0;
     height: 120px; 
     background-color: white;
@@ -329,8 +330,9 @@ img
 .bnd-tooltip 
 {
     position: relative;
+    z-index:  20;
     display:  inline-block;
-    cursor:   pointer;  
+    cursor:   pointer; 
 }
 .bnd-tooltip-text 
 {
@@ -342,7 +344,6 @@ img
     border-radius: 8px;
     padding: 4px 8px;
     position: absolute;
-    z-index: 1;
     bottom: 100%;
     left: 50%;
     margin-left: -30px;
@@ -645,7 +646,7 @@ img
 /* ------------------------------------------------------------ */
 .bnd-modal
 {
-    z-index:     1;      /* Sit on top */
+    z-index:     20;     /* Sit on top */
     display:     none;   /* Hidden by default */
     padding-top: 120px;
     position:    fixed;  /* Stay in place */
